# picamera.js

./: .gitignore  .npmignore  .prettierignore  .prettierrc  CMakeLists.txt  README.md  binding.gyp  eslint.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.prod.json
.github/workflows/: main.yml
demo/: package-lock.json  package.json  server.ts  tsconfig.json
demo/src/: index.html  opencv.sample.ts  server.ts
lib/: builder.ts  camera.ts  index.ts  types.ts
src/: node_binding.cpp
src/core/: camera_manager.cpp  control_manager.cpp  stream_manager.cpp
src/encoders/: jpeg_encoder.cpp
src/include/: camera_manager.hpp  common.hpp  control_manager.hpp  jpeg_encoder.hpp  node_binding.hpp  stream_manager.hpp
